# codecrafters-git-rust

./: Cargo.toml  README.md
src/: main.rs
src/git/: checkout.rs  clone.rs  discovery.rs  init.rs  mod.rs  negotiate.rs  pack.rs  pktline.rs  transport.rs
src/git/objects/: kind.rs  mod.rs
