[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.96"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
flate2 = "1.0.34"                                # compression
thiserror = "1.0.38"                             # error handling
clap = { version = "4.0.32", features = ["derive"] }                # creating a cli
sha1 = "0.10"
hex = "0.4"
url = "2.5.8"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
